# A_Web_Agent_with_FastAPI_LangChain_and_Ollama

./: .env.example  .gitignore  Makefile  README.md  package-lock.json  pyproject.toml  requirements.txt  web_agent.ipynb
.github/workflows/: ci.yml
app/backend/: main.py
app/frontend/: index.html  package-lock.json  package.json
app/frontend/src/: App.jsx  styles.css
src/ask_web_agent/: __init__.py  agent.py  api.py  cli.py  config.py  schemas.py  tools.py
tests/: test_api.py  test_schemas.py
