[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ask-web-agent"
version = "0.2.0"
description = "Production-ready Python package and React UI for a LangChain-powered ask-the-web agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "ddgs==9.4.0",
  "fastapi==0.116.1",
  "httpx>=0.27",
  "langchain==0.3.26",
  "langchain-community==0.3.27",
  "langchain-openai==0.3.27",
  "openai==1.86.0",
  "uvicorn==0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[project.scripts]
ask-web-agent = "ask_web_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
